# aetherscope

./: Cargo.toml
src/: lib.rs
src/services/object_store/: fs.rs
src/tasks/: frontier_manager.rs  headless_browser_fetcher.rs  http_fetcher.rs  mod.rs  signal_extractor.rs  url_extractor.rs
src/tasks/frontier/: mod.rs
src/tasks/frontier/filters/: adversarial.rs  mod.rs  robots.rs  unique.rs
src/tasks/frontier/rankers/: mod.rs  multi_score.rs
src/tasks/frontier/scorers/: cost.rs  coverage.rs  freshness.rs  importance.rs  mod.rs  novelty.rs  spam.rs
src/types/: error.rs  mod.rs
src/types/configs/: frontier_manager_config.rs  headless_browser.rs  http_fetcher_config.rs  mod.rs  robots_filter_config.rs  unique_filter_config.rs  url_extractor_config.rs
src/types/configs/filters/: mod.rs  robots_filter_config.rs  unique_filter_config.rs
src/types/configs/scorers/: cost_scorer_config.rs  coverage_scorer_config.rs  freshness_scorer_config.rs  importance_scorer_config.rs  mod.rs  novelty_scorer_config.rs  spam_scorer_config.rs
src/types/signals/: domain_authority_prior.rs  domain_coverage.rs  host_gate.rs  host_stats_stripe.rs  inlink_agg.rs  mod.rs  prefix_stats.rs  url_depth.rs  url_state.rs
src/types/structs/: mod.rs  queue_status.rs  record.rs
src/types/traits/: check_hash_set.rs  frontier_filter.rs  frontier_scorer.rs  hash_set.rs  mod.rs  object_store.rs  queue.rs  signal.rs  task.rs  worker.rs
src/utils/: dependencies.rs  fs.rs  fsm.rs  mod.rs  sync.rs  web.rs
src/utils/fsm/: mod.rs  stream_reader.rs  title_fsm.rs  url_fsm.rs
(+17 files in other folders)
