[package]
name = "aetherscope"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chromiumoxide = { version = "0.8.0", features = ["_fetcher-rustls-tokio"] }
fastpool = "1.0.2"
futures = "0.3.31"
reqwest = "0.12.28"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = "1.48.0"
uuid = {version="1.19.0", features=["v4"]}

[dev-dependencies]
httpmock = "0.8.2"
