[package]
name = "aetherscope"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.0"
chromiumoxide = { version = "0.8.0", features = ["_fetcher-rustls-tokio"] }
fastbloom = "0.14.1"
fastpool = "1.0.2"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.28", features = ["rustls-tls", "stream"] }
robotxt = "0.6.1"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tokio-util = "0.7.17"
url = "2.5.8"
uuid = {version="1.19.0", features=["v4"]}
sqlx  = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
src = "0.0.6"
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
cdrs-tokio = "9.0.0"
chrono = "0.4.43"
xxhrs = "2.0.1"
psl = "2.1.183"

[dev-dependencies]
httpmock = "0.8.2"
